kubernetes/vader/applications/user-apps/heimdall/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall-service
  namespace: user-apps

spec:
  type: ClusterIP
  selector:
    app: heimdall
  ports:
    - name: http
      port: 80
      targetPort: http
