kubernetes/vader/applications/user-apps/heimdall/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: heimdall-ingressroute
  namespace: user-apps

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`heimdall.feldman.in`)
      kind: Rule
      services:
        - name: heimdall-service
          port: 80
  tls:
    secretName: heimdall-feldman-in-tls
